# robotframework-operatonlibrary

./: .gitignore  .gitlab-ci.yml  AGENTS.md  Makefile  README.md  default.jar.nix  default.nix  devenv.nix  flake.nix  pom.xml  robot.toml
.github/workflows/: ci.yml  pages.yml  release.yml
python/: README.md  pyproject.toml
python/src/Operaton/: __init__.py
src/main/java/org/operaton/bpm/extension/robot/: BpmnRenderer.java  DmnRenderer.java  Libdoc.java  Robot.java  RobotRemote.java  RobotWatch.java
src/main/js/src/: render.mjs
src/main/resources/: bpmn-render.js  dmn-render.js  logback.xml
src/main/resources/org.graalvm.python.vfs/src/: Operaton.py  ProcessEngine.py
src/main/resources/org.graalvm.python.vfs/src/keywords/: base.py  bpmn_keywords.py  dmn_keywords.py  event_keywords.py  external_task_keywords.py  form_keywords.py  history_keywords.py  process_assertions.py  timer_keywords.py  typed_variables.py
src/test/java/org/operaton/bpm/extension/robot/: CurrentInstanceTest.java  DmnVisualizationTest.java  InspectCompatibilityTest.java  TaskNameResolutionTest.java
src/test/resources/example/: BpmnExecution.robot  CurrentInstance.robot  DmnVisualization.robot  TaskNameResolution.robot  current-instance-process.bpmn
